tests/reference/asr-continue_compilation_coarrays-85ccad8.stderr
semantic error: Variable 'x' is not a coarray; coindex notation [..] requires a codimension attribute
 --> tests/errors/continue_compilation_coarrays.f90:5:9
  |
5 |     x = x[1]
  |         ^^^^ 

semantic error: Coarray 'b' has corank 2 but 1 coindices were provided
 --> tests/errors/continue_compilation_coarrays.f90:9:5
  |
9 |     B[1] = 5
  |     ^^^^ 

semantic error: Variable 's' is not a coarray; coindex notation [..] requires a codimension attribute
  --> tests/errors/continue_compilation_coarrays.f90:17:11
   |
17 |     s%x = s%x[1]
   |           ^^^^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
  --> tests/errors/continue_compilation_coarrays.f90:17:5
   |
17 |     s%x = s%x[1]
   |     ^^^   ^^^^^^ type mismatch (integer and t)

semantic error: Coarray 's' has corank 2 but 1 coindices were provided
  --> tests/errors/continue_compilation_coarrays.f90:20:5
   |
20 |     s%y[1] = 5
   |     ^^^^^^ 
